# til

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
config/: settings.toml
tests/: test_til.py
tests/application/repositories/: test_interfaces.py
tests/domain/: test_learning.py
tests/unit/: test_til.py
til/application/repositories/: interfaces.py
til/application/usecases/: interfaces.py  register_a_til.py
til/domain/: learning.py
til/infrastructure/repositories/local/: learning.py
til/ports/: cli.py
