[tool.poetry]
name = "til"
version = "0.1.0"
description = ""
authors = ["Alexandre <git@alexndr.dev>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
til = "til.cli:til"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
