[tool.poetry]
name = "til"
version = "0.1.0"
description = ""
authors = ["Alexandre <git@alexndr.dev>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
pydantic = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.11.1"
pytest-cov = "^2.8.1"
mypy = "^0.761"
black = "^19.10b0"
pytest-watch = "^4.2.0"
hypothesis = "^5.1.2"

[tool.poetry.scripts]
til = "til.ports.cli:til"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
